--- a/resources/style.css
+++ b/resources/style.css
@@ -50,6 +50,61 @@ header.mobile {
 }
 
 
+/* Hero teaser */
+
+.hero-container {
+  display: flex;
+
+}
+
+.hero-teaser {
+  width: 60%;
+  padding: 2rem 1.5rem;
+}
+
+.hero-teaser img {
+  width: 100%;
+}
+
+.grey-background {
+  background-color: #D8D8D8;
+}
+
+.side-teasers {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-right: 2rem;
+  width: 23%;
+}
+
+.header-button {
+  padding: 0.5rem 0;
+  width: 100%;
+  background-color: #4A4A4A;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+.header-button a {
+    color: white;
+}
+
+.side-teasers p, .side-teasers h1 {
+  margin-bottom: 2rem;
+  color: #4A4A4A;
+}
+
+.side-teasers h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.side-teasers p {
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
 
 
 
