--- a/resources/style.css
+++ b/resources/style.css
@@ -143,7 +143,7 @@ header ul {
   /* Hero teaser */
 
   .side-teasers {
-    width: 100%;
+    width: auto;
     padding: 2rem 1rem;
     border: solid pink 5px;
   }
