--- a/resources/style.css
+++ b/resources/style.css
@@ -125,23 +125,21 @@ header.mobile {
 /* Secondary teaser */
 
 .side-teaser {
-  flex-direction: column;
-  width: inherit;
+
 }
 
 .image-side-teaser {
   padding: 1rem;
   width: 37%;
-  height: auto;
-}
-
-.image-side-teaser img {
-  width: 100%;
   height: 100%;
 }
 
+.image-side-teaser img {
+  max-width: 100%;
+}
+
 .side-teaser-text {
-  width: 65%;
+  flex-grow: 1;
 }
 
 /* Media queries for mobile */
